--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.data=classpath:data.sql
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 server.port=8181
 
 #------------------------------------ Hibernate / JPA (ORM) Configurations ---------------------------------------------
