--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,35 +1,31 @@
-name: Java CI with Maven
+name: CI
 
-on:
-  push:
-    branches: 
-      - 'feature/**'
-      - 'main'
-  pull_request:
-    branches: [ "main" ]
-permissions:
-  contents: write
-  security-events: write
+on: [push, pull_request]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [14, 16, 18] 
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        java-version: '17'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build and test with Maven
-      run: mvn -B package --file pom.xml
-    - name: Generate JaCoCo coverage report
-      run: mvn clean test jacoco:report
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v2
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }} # Add this line
-        files: ./target/site/jacoco/jacoco.xml
-        fail_ci_if_error: true
+      - name: Checkout code
+        uses: actions/checkout@v2
+      
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npm test
+        
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v2
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
