--- a/frontend/src/config/config.prod.json
+++ b/frontend/src/config/config.prod.json
@@ -1,4 +1,4 @@
 {
   "path": "./config/config.prod.json",
-  "backendURL": "https://%ADSS_IP_ADDRESS%:8081/softbiz/api"
+  "backendURL": "https://%ADSS_IP_ADDRESS%/softbiz/api"
 }
