--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -2,9 +2,9 @@ name: CI for Java and Angular with Codecov
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, feature-branch-tests ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, feature-branch-tests ]
 
 jobs:
   build:
