--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,32 +1,34 @@
-name: Frontend Test
+name: Workflow for Codecov with Angular
 
-on:
-  push:
-    branches:
-      - feature-branch-ui
-  pull_request:
-    branches:
-      - feature-branch-ui
+on: [push, pull_request]
 
 jobs:
-  frontend-test:
+  run:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '20.13.*' 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
 
-    - name: Install dependencies
-      run: |
-        cd frontend
-        npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run tests
-      run: |
-        cd frontend
-        npm test
+      - name: Build Angular project
+        run: npm run build
+
+      - name: Run tests and collect coverage
+        run: npm run test -- --code-coverage --watch=false
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/**/lcov.info
+          flags: unittests
+          name: codecov-angular
+          fail_ci_if_error: true
