--- a/.github/workflows/weather-service.yml
+++ b/.github/workflows/weather-service.yml
@@ -10,10 +10,10 @@ on:
 
 env:
   AWS_REGION: eu-north-1
-  S3_BUCKET_NAME: your-s3-bucket-name
-  AWS_ECS_CLUSTER_NAME: your-ecs-cluster-name
-  AWS_ECS_SERVICE_NAME: your-ecs-service-name
-  AWS_ECR_REPOSITORY_NAME: your-ecr-repository-name
+  S3_BUCKET_NAME: my-s3-bucket
+  AWS_ECS_CLUSTER_NAME: my-ecs-cluster
+  AWS_ECS_SERVICE_NAME: my-ecs-service
+  AWS_ECR_REPOSITORY_NAME: my-ecr-repository
 
 jobs:
   build:
