--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 #------------------------------------ Database Configurations----------------------------- -----------------------------
-spring.datasource.url=jdbc:mysql://localhost:3306/weather?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://weatherapplicationdb.cno4ogmiaf2o.eu-north-1.rds.amazonaws.com:3306/weather?createDatabaseIfNotExist=true&autoReconnect=true&useSSL=false
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.platform=mysql
 spring.datasource.data=classpath:data.sql
 spring.datasource.username=root
-spring.datasource.password=root
-server.port=8181
+spring.datasource.password=12345678
+server.port=5000                 
 
 #------------------------------------ Hibernate / JPA (ORM) Configurations ---------------------------------------------
 spring.jpa.generate-ddl=true
@@ -30,10 +30,13 @@ springdoc.api-docs.path=/openapi/api-docs
 springdoc.swagger-ui.path=/openapi/swagger
 
 #------------------------------------ CORS Configurations --------------------------------------------------------------
-sbs.security.allowedOrigins=http://localhost:4200,http://localhost:49799
+#sbs.security.allowedOrigins=http://localhost:4200,http://localhost:49799
 
 spring.web.cors.allow-credentials=true
 spring.web.cors.allowed-origins=*
 spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.web.cors.allowed-headers=*
 spring.web.cors.max-age=3600
+
+sbs.security.allowedOrigins=http://localhost:4200,http://localhost:49799,http://weatherbuck2.s3-website.eu-north-1.amazonaws.com
+app.allowedOrigins=http://localhost:4200,http://weatherbuck2.s3-website.eu-north-1.amazonaws.com 
