--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -1,62 +1,37 @@
-codecov:
-  require_ci_to_pass: yes
-  notify:
-    after_n_builds: 1
+name: Java CI with Maven
 
-coverage:
-  precision: 2
-  round: down
-  range: "70...100"
-  status:
-    project:
-      default:
-        target: 80%
-        threshold: 1%
-    patch:
-      default:
-        target: 80%
-        threshold: 1%
+on:
+  push:
+    branches:
+      - feature-branch-tests
+  pull_request:
+    branches:
+      - feature-branch-tests
 
-comment:
-  layout: "reach, diff, flags, files"
-  behavior: default
-  require_changes: yes
-
-parsers:
-  js:
-    coverage:
-      override: true
-      parser: "lcov"
-
-fixes:
-  - "frontend/*:src/*"
-
-ignore:
-  - "node_modules"
-  - "test"
-
-flags:
-  frontend:
-    paths:
-      - "src/*"
-
-# GitHub Action for Codecov
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v2
         with:
-          node-version: '14'
-      - run: npm install
-      - run: npm test
-      - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4.0.1
+          java-version: '17'
+          distribution: 'adopt'
+
+      - name: Cache Maven packages
+        uses: actions/cache@v2
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage/lcov.info
-          flags: frontend
-          name: codecov-frontend
-          directory: ./frontend/src/app/test
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+
+      - name: Install dependencies
+        run: ./mvnw install -DskipTests
+
+      - name: Run tests
+        run: ./mvnw test
