--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -22,6 +22,9 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
 
+      - name: Make Maven wrapper executable
+        run: chmod +x ./mvnw
+
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
