--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -3,9 +3,11 @@ name: Java CI with Maven
 on:
   push:
     branches:
+      - main
       - feature-branch-tests
   pull_request:
     branches:
+      - main
       - feature-branch-tests
 
 jobs:
@@ -14,19 +16,19 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          java-version: '11'
+          distribution: 'temurin'
 
-      - name: Make Maven wrapper executable
-        run: chmod +x ./mvnw
+      - name: Install Maven
+        run: sudo apt-get install -y maven
 
       - name: Cache Maven packages
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
@@ -34,10 +36,10 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Install dependencies
-        run: ./mvnw install -DskipTests
+        run: mvn install -DskipTests
 
       - name: Run tests
-        run: ./mvnw test
+        run: mvn test
 
       - name: Gather logs on failure
         if: failure()
