--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -18,28 +18,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 11
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Install Maven
-        run: sudo apt-get install -y maven
+        run: sudo apt-get update && sudo apt-get install -y maven
+
+      - name: Navigate to backend directory
+        run: cd backend
 
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ hashFiles('backend/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
       - name: Install dependencies
-        run: mvn install -DskipTests
+        run: cd backend && mvn install -DskipTests
 
       - name: Run tests
-        run: mvn test
+        run: cd backend && mvn test
 
       - name: Gather logs on failure
         if: failure()
