--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -36,14 +36,7 @@ jobs:
       - name: Build common module
         run: mvn install -f path/to/common/pom.xml
 
-      - name: Build weather project
+      - name: Build backend project
         run: mvn install -DskipTests -f backend/pom.xml
 
-      - name: Run tests
-        run: mvn test -f backend/pom.xml
-
-      - name: Gather logs on failure
-        if: failure()
-        run: |
-          echo "Build failed. Displaying log files..."
-          find . -name "*.log" | xargs cat
+      - name: Run test
