--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -39,11 +39,11 @@ jobs:
       - name: Run tests and generate coverage report
         run: mvn test jacoco:report -f backend/pom.xml
 
-      - name: Gather logs on failure
-        if: failure()
-        run: |
-          echo "Build failed. Displaying log files..."
-          find . -name "*.log" | xargs cat
+      - name: Convert JaCoCo XML to LCOV
+        run: npx jacoco-to-lcov backend/target/site/jacoco/jacoco.xml coverage/lcov.info
+
+      - name: Generate coverage summary
+        run: npx lcov-summary -r coverage/lcov.info -o coverage/coverage-summary.json
 
       - name: Install check-code-coverage
         run: npm i -D check-code-coverage
@@ -52,4 +52,3 @@ jobs:
         run: npx -p check-code-coverage set-gh-status
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: backend/target/site/jacoco
